added links to index.html for webpack-mulitple-output-multiple-html

--- a/webpack-multiple-entries-multiple-htmls/src/index.ejs
+++ b/webpack-multiple-entries-multiple-htmls/src/index.ejs
@@ -10,5 +10,5 @@
   		<li><a href="modules/admin-mgmt/admin.html">Admin</a></li>
  		<li><a href="modules/member-mgmt/member.html">Member</a></li>
  	</ul>
-  <script type="text/javascript" src="app.bundle.js"></script></body>
+  </body>
 </html>
